--- a/css/custom.css
+++ b/css/custom.css
@@ -5,27 +5,27 @@ h2 {
 }
 
 {
-    box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+html, body {
+  overflow-x: hidden; 
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+@media (max-width: 768px) {
+  body {
+    overflow-x: hidden;
   }
-  
-  html, body {
-    overflow-x: hidden; 
+
+
+  .container, .wrapper, .content {
     width: 100%;
-    margin: 0;
-    padding: 0;
+    overflow: hidden;
   }
-  
-  @media (max-width: 768px) {
-    body {
-      overflow-x: hidden;
-    }
-  
-  
-    .container, .wrapper, .content {
-      width: 100%;
-      overflow: hidden;
-    }
-  }
+}
 
 .body {
     overflow: hidden;
@@ -256,4 +256,37 @@ button {
 img.rounded-shadow {
     border-radius: 20px; /* Maakt de hoeken afgerond */
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3); /* Voeg een duidelijke schaduw toe */
+}
+
+.whatsapp-float {
+    position: fixed;
+    width: 60px;
+    height: 60px;
+    bottom: 20px;
+    right: 20px;
+    background-color: #25d366;
+    color: white;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 30px;
+    box-shadow: 2px 2px 3px #999;
+    z-index: 100;
+}
+
+.whatsapp-icon {
+    margin-top: 16px;
+}
+
+@media (max-width: 768px) {
+    .whatsapp-float {
+        width: 50px;
+        height: 50px;
+        bottom: 15px;
+        right: 15px;
+        font-size: 24px;
+    }
+
+    .whatsapp-icon {
+        margin-top: 13px;
+    }
 }
