--- a/css/custom.css
+++ b/css/custom.css
@@ -31,6 +31,21 @@ html, body {
     overflow: hidden;
 }
 
+#feature-last .feature-item img {
+    width: 225px;
+    height: 225px;
+    display: block;
+    margin: 0 auto;
+}
+
+#feature-last h4 {
+    color: white;
+    margin-top: 10px;
+}
+
+
+
+
 .img-fixed-size {
     width: 180px;
     height: 180px;
